--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'application'
 }
 
 group = 'com.codesoom'
@@ -13,10 +14,37 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
+
+	// AssertJ
+	testImplementation 'org.assertj:assertj-core:3.21.0'
+
+	// Spring Developer Tools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.5'
+
+	// Spring Data Core
+	implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.5.4'
+
+	// Spring Data JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
+	runtimeOnly 'com.h2database:h2:1.4.200'
+
+	// Spring Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	
+	// Lombok
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+	// DozerMapper
+	implementation 'com.github.dozermapper:dozer-core:6.4.0'
 }
 
 test {
 	useJUnitPlatform()
+}
+
+application {
+	mainClass = 'com.codesoom.project.App'
 }
